2006-09-20  Tommi Komulainen  <tommi.komulainen@nokia.com>

	Taken from GNOME CVS. NB#18559

    Wed Sep 20 16:59:38 2006  Tim Janik  <timj@imendio.com>

	* gtk/gtkviewport.c: always update the bin_window position and size
	in size_allocate, even if we don't have a visible child. this fixes
	expose artefacts as described in #313508.

	* gtk/gtkscrolledwindow.c: make hiding of automatic scrollbars when we
	have no visible child explicit.

2006-09-20  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtktreeprivate.h (TREE_VIEW_DRAG_WIDTH): Increase the drag area
	width for column header resizing from 6px to 28px
	(6 * (dpi/96) * (stylus ? 2 : 1))

2006-09-20  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtktreeviewcolumn.c (_gtk_tree_view_column_realize_button):
	Replace magical '3' with properly calculated value when positioning
	the drag window, similar to gtk_tree_view_size_allocate_columns.

2006-09-19  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gdk/x11/gdkdisplay-x11.c (gdk_display_open): Allow disabling XSHM
	by setting GDK_DISABLE_XSHM environment variable. Partial hack for
	NB#22173/sapwood

2006-09-19  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkcalendar.c (gtk_calendar_init): Update first day of the week
	calculation logic to take into account both related _NL_* values.
	NB#40428

2006-09-19 Xan Lopez <xan.lopez@nokia.com> 

	* gtk/gtktreeview.c: (gtk_tree_view_class_init), (validate_row):

	Add a separator-height style property to GtkTreeView and use it to
	calculate separator's height in treeviews. Fixes NB#37326.

2006-09-19 Xan Lopez <xan.lopez@nokia.com> 

	* gtk/gtkcalendar.c: (gtk_calendar_realize_arrows),
	(gtk_calendar_size_allocate), (gtk_calendar_paint_arrow):

	Changed hardcoded arrow sizes for style properties. Fixes NB#23025

2006-09-18  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkarrow.c (gtk_arrow_expose): Use full extents of the widget to
	draw bigger arrows. NB#33725
