@@ -1,3 +1,13 @@
+2006-09-21  Tommi Komulainen  <tommi.komulainen@nokia.com>
+
+	Taken from GNOME CVS. NB#31766
+
+    2005-08-20  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkrange.c (gtk_range_adjustment_changed)
+	(gtk_range_adjustment_value_changed):  Don't queue a draw
+	if the layout has not changed.  (#313991, Benjamin Berg)
+
 2006-09-20  Tommi Komulainen  <tommi.komulainen@nokia.com>
 
 	Taken from GNOME CVS. NB#18559
